--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "gurobipy>=12.0.1",
     "torch>=2.6.0",
     "transformers>=4.50.0",
     "trl>=0.15.2",
