--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,11 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "gurobipy>=12.0.1",
+    "peft>=0.15.0",
     "torch>=2.6.0",
     "transformers>=4.50.0",
-    "trl>=0.15.2",
+    "trl>=0.16.0",
+    "wandb>=0.19.8",
 ]
 
 [project.optional-dependencies]
