--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,17 +16,8 @@ dependencies = [
     "wandb>=0.19.8",
 ]
 
-[project.optional-dependencies]
-build = ["torch", "setuptools", "packaging"]
-compile = ["flash-attn"]
-
-[tool.uv]
-no-build-isolation-package = ["flash-attn"]
-
-[[tool.uv.dependency-metadata]]
-name = "flash-attn"
-version = "2.6.3"
-requires-dist = ["torch", "einops"]
+[project.scripts]
+infer = "legogpt.infer:main"
 
 [build-system]
 requires = ["hatchling"]
