Add prepare_finetuning_dataset to uv scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
 
 [project.scripts]
 infer = "legogpt.infer:main"
+prepare_finetuning_dataset = "legogpt.prepare_finetuning_dataset:main"
 
 [build-system]
 requires = ["hatchling"]
