--- a/src/texture/pyproject.toml
+++ b/src/texture/pyproject.toml
@@ -8,10 +8,10 @@ dependencies = [
     "accelerate>=1.6.0",
     "bpy>=4.4.0",
     "controlnet-aux>=0.0.9",
-    "diffusers>=0.33.1",
+    "diffusers<0.24.0",
     "envlight>=0.1.0",
     "h5py>=3.13.0",
-    "huggingface-hub>=0.31.1",
+    "huggingface-hub<0.26",
     "imageio>=2.37.0",
     "jaxtyping>=0.3.2",
     "libigl>=2.5.1",
@@ -26,7 +26,7 @@ dependencies = [
     "torch>=2.7.0",
     "torchvision>=0.22.0",
     "tqdm>=4.67.1",
-    "transformers>=4.51.3",
+    "transformers>=4.48.3",
     "trimesh>=4.6.8",
     "typeguard>=4.4.2",
     "wandb>=0.19.10",
