--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ dependencies = [
     "peft>=0.15.0",
     "torch>=2.6.0",
     "transformers>=4.50.0",
+]
+
+[project.optional-dependencies]
+finetuning = [
     "trl>=0.16.0",
     "wandb>=0.19.8",
 ]
