--- a/src/texture/pyproject.toml
+++ b/src/texture/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "controlnet-aux>=0.0.9",
     "diffusers<0.24.0",
     "envlight>=0.1.0",
+    "gurobipy>=12.0.2",
     "h5py>=3.13.0",
     "huggingface-hub<0.26",
     "imageio>=2.37.0",
